// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service reducer should handle END_SERVICE_AUDIT_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {
      "1": Object {
        "action": "config_active",
        "date": "Mon, 12 Feb 2018 16:19:23 GMT",
        "id": 1,
        "params": Object {
          "config_comment": "wertwer",
          "config_id": 3,
          "old_config_id": 1,
        },
        "service_id": "yandex_afisha",
        "user_id": 204409962,
      },
      "2": Object {
        "action": "config_test",
        "date": "Mon, 12 Feb 2018 16:46:39 GMT",
        "id": 2,
        "params": Object {
          "config_comment": "Initial config",
          "config_id": 1,
          "old_config_id": null,
        },
        "service_id": "yandex_afisha",
        "user_id": 204409962,
      },
      "3": Object {
        "action": "config_active",
        "date": "Mon, 12 Feb 2018 16:51:53 GMT",
        "id": 3,
        "params": Object {
          "config_comment": "Initial config",
          "config_id": 1,
          "old_config_id": 3,
        },
        "service_id": "yandex_afisha",
        "user_id": 204409962,
      },
      "4": Object {
        "action": "config_test",
        "date": "Mon, 12 Feb 2018 16:56:02 GMT",
        "id": 4,
        "params": Object {
          "config_comment": "wertwer",
          "config_id": 3,
          "old_config_id": null,
        },
        "service_id": "yandex_afisha",
        "user_id": 204409962,
      },
      "5": Object {
        "action": "config_active",
        "date": "Mon, 12 Feb 2018 16:57:02 GMT",
        "id": 5,
        "params": Object {
          "config_comment": "wertwer",
          "config_id": 3,
          "old_config_id": 1,
        },
        "service_id": "yandex_afisha",
        "user_id": 204409962,
      },
      "6": Object {
        "action": "config_test",
        "date": "Mon, 12 Feb 2018 17:18:51 GMT",
        "id": 6,
        "params": Object {
          "config_comment": "Initial config",
          "config_id": 1,
          "old_config_id": null,
        },
        "service_id": "yandex_afisha",
        "user_id": 204409962,
      },
    },
    "items": Array [
      1,
      2,
      3,
      4,
      5,
      6,
    ],
    "loaded": true,
    "offset": 6,
    "total": 6,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle END_SERVICE_COMMENT 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle END_SERVICE_CONFIG_APPLYING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": 123,
    "byId": Object {
      "234": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 234,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
          Object {
            "comment": "",
            "status": "active",
          },
          Object {
            "comment": "",
            "status": "approved",
          },
        ],
      },
      "235": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 235,
        "statuses": Array [],
      },
      "236": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 236,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "237": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 237,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "238": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 238,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "239": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 239,
        "statuses": Array [],
      },
      "240": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 240,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "241": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 241,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "242": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 242,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "243": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 243,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "244": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 244,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "245": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 245,
        "statuses": Array [],
      },
      "246": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 246,
        "statuses": Array [],
      },
      "247": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 247,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "248": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 248,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "249": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 249,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "250": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 250,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "251": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 251,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "252": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 252,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "253": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 253,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
    },
    "byLabelId": Object {
      "123": Object {
        "items": Array [
          234,
          235,
          236,
          237,
          238,
          239,
          240,
          241,
          242,
          243,
          244,
          245,
          246,
          247,
          248,
          249,
          250,
          251,
          252,
          253,
        ],
        "loaded": true,
        "offset": 20,
        "total": 60,
      },
    },
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle END_SERVICE_CONFIG_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {
      "456": Object {
        "comment": "stand alone a config",
        "date": "2018-01-10T11:12:13",
        "id": 456,
        "status": "inactive",
      },
    },
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle END_SERVICE_CONFIGS_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": 123,
    "byId": Object {
      "234": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 234,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "235": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 235,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "236": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 236,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "237": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 237,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "238": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 238,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "239": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 239,
        "statuses": Array [],
      },
      "240": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 240,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "241": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 241,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "242": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 242,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "243": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 243,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "244": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 244,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "245": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 245,
        "statuses": Array [],
      },
      "246": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 246,
        "statuses": Array [],
      },
      "247": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 247,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "248": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 248,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "249": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 249,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "250": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 250,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "251": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 251,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "252": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 252,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "253": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 253,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
    },
    "byLabelId": Object {
      "123": Object {
        "items": Array [
          234,
          235,
          236,
          237,
          238,
          239,
          240,
          241,
          242,
          243,
          244,
          245,
          246,
          247,
          248,
          249,
          250,
          251,
          252,
          253,
        ],
        "loaded": true,
        "offset": 20,
        "total": 60,
      },
    },
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle END_SERVICE_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle END_SERVICE_SETUP_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": Object {
      "js_inline": "(func () { /* here goes awesome JS code */})(\\"<PARTNER-ID>\\")",
      "nginx_config": "here 
 goes 
 config",
      "token": "AABBCCDDEEFF....",
    },
    "loaded": true,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle RESET_SERVICE_AUDIT 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle START_SERVICE_AUDIT_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle START_SERVICE_CONFIG_APPLYING 1`] = `
Object {
  "applyingConfig": Object {
    "id": 234,
    "options": Object {
      "oldConfigId": 235,
      "target": "active",
    },
    "progress": true,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": 123,
    "byId": Object {
      "234": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 234,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "235": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 235,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "236": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 236,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "237": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 237,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "238": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 238,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "239": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 239,
        "statuses": Array [],
      },
      "240": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 240,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "241": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 241,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "242": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 242,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "243": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 243,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "244": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 244,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "245": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 245,
        "statuses": Array [],
      },
      "246": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 246,
        "statuses": Array [],
      },
      "247": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 247,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "248": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 248,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "249": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 249,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "preview",
          },
        ],
      },
      "250": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 250,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "251": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 251,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "252": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 252,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
      "253": Object {
        "comment": "made a config",
        "date": "2018-01-10T11:12:13",
        "id": 253,
        "statuses": Array [
          Object {
            "comment": "",
            "status": "active",
          },
        ],
      },
    },
    "byLabelId": Object {
      "123": Object {
        "items": Array [
          234,
          235,
          236,
          237,
          238,
          239,
          240,
          241,
          242,
          243,
          244,
          245,
          246,
          247,
          248,
          249,
          250,
          251,
          252,
          253,
        ],
        "loaded": true,
        "offset": 20,
        "total": 60,
      },
    },
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle START_SERVICE_CONFIG_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle START_SERVICE_CONFIGS_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": 123,
    "byId": Object {},
    "byLabelId": Object {
      "123": Object {
        "items": Array [],
        "loaded": false,
        "offset": undefined,
        "total": 0,
      },
    },
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle START_SERVICE_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": null,
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should handle START_SERVICE_SETUP_LOADING 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": Object {
    "comment": "",
    "id": 123,
    "mobile_monitorings_enabled": true,
    "monitorings_enabled": true,
    "name": "ololo.ru",
    "optionalMonitorings": Object {
      "mobile_monitorings_enabled": true,
    },
    "settingEnableMonitoring": false,
    "settingSupportPriority": false,
    "status": "ok",
  },
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service reducer should return the initial state 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "options": null,
    "progress": false,
  },
  "audit": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "configs": Object {
    "activeLabelId": null,
    "byId": Object {},
    "byLabelId": Object {},
    "expIds": Object {
      "data": Object {},
      "loaded": false,
    },
  },
  "experimentApplying": Object {
    "progress": false,
  },
  "health": Object {
    "lastUpdateTimeHealth": 0,
    "loaded": false,
    "loading": true,
    "state": Array [],
  },
  "labels": Object {
    "data": Object {},
    "loaded": false,
    "loading": true,
  },
  "moderatingConfig": Object {
    "approved": null,
    "comment": null,
    "id": null,
    "progress": false,
  },
  "rules": Object {
    "data": Object {
      "items": Array [],
      "total": 0,
    },
    "loaded": false,
    "schema": Object {},
  },
  "sbs": Object {
    "allSbsProfiles": Object {
      "byId": Object {
        "-1": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": false,
        },
        "0": Object {
          "data": Object {
            "general_settings": Object {},
            "url_settings": Array [],
          },
          "loaded": true,
        },
      },
      "deleting": false,
      "exist": false,
      "isOpen": false,
      "loading": false,
      "openedProfileId": -1,
      "profile": Object {
        "data": Object {
          "general_settings": Object {},
          "url_settings": Array [],
        },
        "loaded": false,
      },
      "profileTags": Object {
        "data": Array [],
        "loaded": false,
        "loading": false,
      },
      "readOnly": false,
      "saving": false,
      "validation": Array [],
    },
    "loadingRunChecks": false,
    "logs": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "resultChecks": Object {
      "data": Object {
        "items": Array [],
        "total": 0,
      },
      "loaded": false,
      "schema": Object {},
    },
    "screenshotsChecks": Object {
      "loaded": false,
      "logsVisible": Object {},
      "runIdData": Object {},
    },
  },
  "schema": Object {
    "loaded": false,
    "schema": Array [],
  },
  "service": null,
  "setup": Object {
    "data": null,
    "loaded": false,
  },
  "trend": Object {
    "creating": false,
    "loaded": false,
    "ticket_id": null,
  },
}
`;

exports[`service selectors getAudit should return audit from state 1`] = `
Object {
  "byId": Object {
    "1": Object {
      "action": "config_active",
      "date": "Mon, 12 Feb 2018 16:19:23 GMT",
      "id": 1,
      "params": Object {
        "config_comment": "wertwer",
        "config_id": 3,
        "old_config_id": 1,
      },
      "service_id": "yandex_afisha",
      "user_id": 204409962,
    },
    "2": Object {
      "action": "config_test",
      "date": "Mon, 12 Feb 2018 16:46:39 GMT",
      "id": 2,
      "params": Object {
        "config_comment": "Initial config",
        "config_id": 1,
        "old_config_id": null,
      },
      "service_id": "yandex_afisha",
      "user_id": 204409962,
    },
    "3": Object {
      "action": "config_active",
      "date": "Mon, 12 Feb 2018 16:51:53 GMT",
      "id": 3,
      "params": Object {
        "config_comment": "Initial config",
        "config_id": 1,
        "old_config_id": 3,
      },
      "service_id": "yandex_afisha",
      "user_id": 204409962,
    },
    "4": Object {
      "action": "config_test",
      "date": "Mon, 12 Feb 2018 16:56:02 GMT",
      "id": 4,
      "params": Object {
        "config_comment": "wertwer",
        "config_id": 3,
        "old_config_id": null,
      },
      "service_id": "yandex_afisha",
      "user_id": 204409962,
    },
    "5": Object {
      "action": "config_active",
      "date": "Mon, 12 Feb 2018 16:57:02 GMT",
      "id": 5,
      "params": Object {
        "config_comment": "wertwer",
        "config_id": 3,
        "old_config_id": 1,
      },
      "service_id": "yandex_afisha",
      "user_id": 204409962,
    },
    "6": Object {
      "action": "config_test",
      "date": "Mon, 12 Feb 2018 17:18:51 GMT",
      "id": 6,
      "params": Object {
        "config_comment": "Initial config",
        "config_id": 1,
        "old_config_id": null,
      },
      "service_id": "yandex_afisha",
      "user_id": 204409962,
    },
  },
  "items": Array [
    1,
    2,
    3,
    4,
    5,
    6,
  ],
  "loaded": true,
  "offset": 6,
  "total": 6,
}
`;

exports[`service selectors getAuditItemById should return audit with id=3 1`] = `
Object {
  "action": "config_active",
  "date": "Mon, 12 Feb 2018 16:51:53 GMT",
  "id": 3,
  "params": Object {
    "config_comment": "Initial config",
    "config_id": 1,
    "old_config_id": 3,
  },
  "service_id": "yandex_afisha",
  "user_id": 204409962,
}
`;

exports[`service selectors getConfigById should return config with id=235 1`] = `
Object {
  "comment": "made a config",
  "date": "2018-01-10T11:12:13",
  "id": 235,
  "statuses": Array [
    Object {
      "comment": "",
      "status": "preview",
    },
  ],
}
`;

exports[`service selectors getConfigs should return configs from state 1`] = `
Object {
  "byId": Object {
    "234": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 234,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "235": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 235,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "236": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 236,
      "statuses": Array [],
    },
    "237": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 237,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "238": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 238,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "239": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 239,
      "statuses": Array [],
    },
    "240": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 240,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "241": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 241,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "242": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 242,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "243": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 243,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "244": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 244,
      "statuses": Array [],
    },
    "245": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 245,
      "statuses": Array [],
    },
    "246": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 246,
      "statuses": Array [],
    },
    "247": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 247,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "248": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 248,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "249": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 249,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
    "250": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 250,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "251": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 251,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "active",
        },
      ],
    },
    "252": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 252,
      "statuses": Array [],
    },
    "345": Object {
      "comment": "made a config",
      "date": "2018-01-10T11:12:13",
      "id": 345,
      "statuses": Array [
        Object {
          "comment": "",
          "status": "preview",
        },
      ],
    },
  },
  "items": Array [
    234,
    235,
    236,
    237,
    238,
    239,
    240,
    241,
    242,
    243,
    244,
    245,
    246,
    247,
    248,
    249,
    250,
    251,
    252,
    345,
  ],
  "loaded": true,
  "offset": 20,
  "total": 60,
}
`;

exports[`service selectors getSchema should return schema 1`] = `
Array [
  Object {
    "group_name": "TESTGROUP",
    "hint": "testgroup-hint",
    "items": Array [
      Object {
        "key": Object {
          "default": Array [],
          "name": "ACCEL_REDIRECT_URL_RE",
          "type_schema": Object {
            "children": Object {
              "placeholder": "regexp-placeholder",
              "type": "regexp",
            },
            "hint": "accel-redirect-url-re-hint",
            "title": "accel-redirect-url-re-title",
            "type": "array",
          },
        },
      },
      Object {
        "key": Object {
          "default": true,
          "name": "ADB_ENABLED",
          "type_schema": Object {
            "hint": "adb-enabled-hint",
            "placeholder": Object {
              "placeholder_off": "adb-enabled-off-placeholder",
              "placeholder_on": "adb-enabled-on-placeholder",
            },
            "title": "adb-enabled-title",
            "type": "bool",
          },
        },
      },
      Object {
        "key": Object {
          "default": false,
          "name": "ADFOX_DEBUG",
          "type_schema": Object {
            "hint": "adfox-debug-hint",
            "placeholder": Object {
              "placeholder_off": "adfox-debug-off-placeholder",
              "placeholder_on": "adfox-debug-on-placeholder",
            },
            "title": "adfox-debug-title",
            "type": "bool",
          },
        },
      },
    ],
    "title": "testgroup-title",
  },
]
`;
